Fix text overlapping in small screens

--- a/2015/assets/stylesheets/css/style.css
+++ b/2015/assets/stylesheets/css/style.css
@@ -481,7 +481,7 @@ a:hover {
 .banner .banner-content .subtitle p {
     margin: 0px;
     font-size: 42px;
-    line-height: 18px;
+    line-height: 40px;
 }
 
 .banner .banner-content .typed-cursor {
